--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Rohan</span> Portfolio!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing building and stopping trains. But nobody pays me a dime for that work.
+                That's why I am learning and mastering web development. I will not stop until I become the Ninja Web Developer
+            </p>
+            <a class="link-button"target="_blank"href="https://www.linkedin.com/in/belal-uddin-43157b216/">HIRE ME</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="rohan-myown-picture">
+        </div>
+    </section>
 </body>
+
 </html>
