--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </div>
 
         <div class="half-width">
-            <img src="images/my-bg.mp4" alt="rohan-myown-picture">
+            <video>
+                <source src="images/my-bg.mp4" alt="rohan-myown-picture"></source>
+            </video>
+            
         </div>
     </section>
     <section class="dream-big flexible-container">
