--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
         </div>
 
         <div class="half-width">
-            <video>
-                <source src="images/my-bg.mp4" alt="rohan-myown-picture"></source>
-            </video>
-            
+            <img src="images/my-bg.mp4" alt="rohan-myown-picture">
         </div>
     </section>
     <section class="dream-big flexible-container">
