--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="half-width">
-            <img src="images/my-bg.mp4" alt="rohan-myown-picture">
+            <img src="images/my-bg.png" alt="rohan-myown-picture">
         </div>
     </section>
     <section class="dream-big flexible-container">
